Refactor Altinn3 config and package structure #deploy-altinn3-tilgang-service
Deleted unused R2DBC configuration and updated package structure for Altinn3 service. Changes include renaming classes, moving DTOs/Commands, updating Dockerfile, and build.gradle to streamline configuration and dependencies.